Fixed titlebar layout issues

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -22,5 +22,5 @@
 }
 
 .nowrap {
-  white-space: normal;
+  white-space: nowrap;
 }
